# Incompact3d-sq

baseline/channel_re180_single_phase/: README.md  acceptance_criteria.md  build_and_run_example.sh  check_outputs.sh  expected_outputs.md  fiber_init_stage_2_1.md  fiber_interp_solver_stage_2_2.md  fiber_interp_stage_2_2.md  fiber_rigid_coupling_stabilization.md  fiber_rigid_coupling_stage_2_3.md  fiber_rigid_free_stage_2_4.md  fiber_spread_stage_2_2.md  input_2p4_channel_45deg.i3d  input_2p4_channel_parallel.i3d  input_2p4_channel_wallnormal.i3d  input_2p5_kinematics_case_poiseuille_angle15.i3d  input_2p5_kinematics_case_poiseuille_angle45.i3d  input_2p5_kinematics_case_poiseuille_angle75.i3d  input_2p5_kinematics_case_shear.i3d  input_2p5_kinematics_case_shear_dt_half.i3d  input_2p6_two_way_45deg_finite_inertia.i3d  input_2p6_two_way_45deg_low_inertia.i3d  input_2p6_two_way_finite_inertia_case1.i3d  input_2p6_two_way_finite_inertia_case2.i3d  input_2p6_two_way_finite_inertia_case3.i3d  input_2p6_two_way_low_inertia_case1.i3d  input_2p6_two_way_low_inertia_case2.i3d  input_2p6_two_way_low_inertia_case3.i3d  input_2p6_two_way_parallel_finite_inertia.i3d  input_2p6_two_way_parallel_low_inertia.i3d  input_2p6_two_way_wallnormal_finite_inertia.i3d  input_2p6_two_way_wallnormal_low_inertia.i3d  input_2p7_single_phase_mean.i3d  input_2p7_two_way_45deg_mean.i3d  input_2p7_two_way_parallel_mean.i3d  input_2p7_two_way_wallnormal_mean.i3d  input_fiber_init_test.i3d  input_fiber_interp_constant_near_x0_test.i3d  input_fiber_interp_constant_near_z0_test.i3d  input_fiber_interp_constant_test.i3d  (+9 more)
scripts/: postprocess_2p4_centerplane.py  postprocess_2p4_force_moment.py  postprocess_2p7_delta_mean_profile.py  postprocess_2p7_mean_profile.py
src/: CMakeLists.txt  fiber_coupling.f90  fiber_delta.f90  fiber_flex_bending.f90  fiber_flex_constraint.f90  fiber_flex_init.f90  fiber_flex_ops.f90  fiber_init.f90  fiber_interp.f90  fiber_io.f90  fiber_rigid_free.f90  fiber_rigid_kinematics.f90  fiber_rigid_motion.f90  fiber_spread.f90  fiber_types.f90  fibre_bending_operator.f90  fibre_bending_operator_driver.f90  fibre_boundary_freefree.f90  fibre_diagnostics.f90  fibre_energy_diagnostics_driver.f90  fibre_external_force.f90  fibre_external_force_interface_driver.f90  fibre_freefree_boundary_driver.f90  fibre_frequency_scaling_driver.f90  fibre_geometry.f90  fibre_ibm_boundary_safety.f90  fibre_ibm_boundary_safety_check.f90  fibre_ibm_delta.f90  fibre_ibm_delta_check.f90  fibre_ibm_diagnostics.f90  fibre_ibm_feedback.f90  fibre_ibm_feedback_check.f90  fibre_ibm_force_buffer.f90  fibre_ibm_force_buffer_check.f90  fibre_ibm_grid.f90  fibre_ibm_interpolation.f90  fibre_ibm_interpolation_check.f90  fibre_ibm_power_consistency_check.f90  fibre_ibm_power_diagnostics.f90  fibre_ibm_skeleton_check.f90  (+25 more)
stage2_checks/: assert_stage2_0_geometry.py  assert_stage2_1_freefree_boundary.py  assert_stage2_2_bending_operator.py  assert_stage2_3_energy_diagnostics.py  assert_stage2_4_implicit_bending.py  assert_stage2_5_tension_solver.py  assert_stage2_6_structure_advance.py  assert_stage2_7_no_force_long.py  assert_stage2_8_frequency_scaling.py  assert_stage2_9_external_force_interface.py  run_stage2_0_geometry.sh  run_stage2_1_freefree_boundary.sh  run_stage2_2_bending_operator.sh  run_stage2_3_energy_diagnostics.sh  run_stage2_4_implicit_bending.sh  run_stage2_5_tension_solver.sh  run_stage2_6_structure_advance.sh  run_stage2_7_no_force_long.sh  run_stage2_8_frequency_scaling.sh  run_stage2_9_external_force_interface.sh
stage3_checks/: assert_stage3_0_ibm_skeleton.py  assert_stage3_1_delta_kernel.py  assert_stage3_2_interpolation.py  assert_stage3_3_spreading.py  assert_stage3_4_power_consistency.py  assert_stage3_5_feedback_force.py  assert_stage3_6_structure_coupling.py  assert_stage3_7_force_buffer.py  assert_stage3_8_boundary_safety.py  assert_stage3_9_smoke.py  run_stage3_0_ibm_skeleton.sh  run_stage3_1_delta_kernel.sh  run_stage3_2_interpolation.sh  run_stage3_3_spreading.sh  run_stage3_4_power_consistency.sh  run_stage3_5_feedback_force.sh  run_stage3_6_structure_coupling.sh  run_stage3_7_force_buffer.sh  run_stage3_8_boundary_safety.sh  run_stage3_9_smoke.sh
stage4_checks/: assert_stage4_0_oneway_skeleton.py  run_stage4_0_oneway_skeleton.sh
